# sparktop

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
benches/: sysinfo_refresh.rs
docs/: sysinfo-upgrade-perf.md
examples/: refresh_cputime.rs
src/: detail.rs  event.rs  lib.rs  main.rs  render.rs  sproc.rs  sprocs.rs  sterm.rs  view.rs  view_state.rs
