[package]
name = "sparktop"
version = "0.1.0"
authors = ["john li <jli@circularly.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
crossterm = "0"
log = "0"
ordered-float = "2"
pretty_env_logger = "0"
structopt = "0"
sysinfo = "0"
tui = { version = "0", default-features = false, features = ['crossterm'] }
