[package]
name = "sparktop"
version = "0.1.0"
authors = ["john li <jli@circularly.org>"]
edition = "2018"
rust-version = "1.86"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0"
ordered-float = "2"
pretty_env_logger = "0"
ratatui = "0.30"
structopt = "0"
sysinfo = { version = "0.30", default-features = false }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sysinfo_refresh"
harness = false
