[package]
name = "sparktop"
version = "0.1.0"
authors = ["john li <jli@circularly.org>"]
edition = "2021"
rust-version = "1.86"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
ordered-float = "4"
pretty_env_logger = "0.5"
ratatui = "0.30"
sysinfo = { version = "0.30", default-features = false }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "sysinfo_refresh"
harness = false
